--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "antd": "^4.16.13",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.35.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-big-calendar": "^0.33.1"
   }
 }
